# nuclear-safety-pathology-observatory

./: .env.example  .gitignore  CONTRIBUTING.md  INVENTORY.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-oci.yml  (+1 more)
configs/: app.yaml  sources.yaml
db/: schema.sql
docs/: 01-architecture.md  02-safety-case.md  03-data-governance.md  04-threat-model.md  05-source-integration-guide.md  06-research-protocol.md  07-api-contract.md  08-roadmap.md
infra/: README.md
rules/: patterns.yaml
schema/: finding.schema.json  observation.schema.json
scripts/: generate_demo.py  validate_repo.py
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/nspo/: __init__.py  config.py  safety.py  schema_validate.py  sources.py
services/pipeline/nspo/connectors/: __init__.py  base.py  kr_public.py  tw_nusc.py
services/pipeline/nspo/engine/: analyzer.py  cli.py  collect.py  monitor.py  research_report.py
services/pipeline/nspo/io/: __init__.py
services/pipeline/nspo/normalize/: __init__.py  mapping.py  radiation.py
services/pipeline/nspo/research/: __init__.py  maturity.py  trajectories.py
services/pipeline/nspo/store/: __init__.py  observations.py
services/pipeline/tests/: test_analyzer.py  test_collect_monitor.py  test_korea_connectors.py  test_labeled_faults.py  test_normalize_tw.py  test_research.py  test_schema_validate.py
services/pipeline/tests/fixtures/: kr_khnp_weather_sample.json  kr_korad_radiation_sample.xml  tw_nusc_monthly_sample.csv  tw_nusc_radiation_sample.csv  tw_nusc_stations_sample.csv
(+63 files in other folders)
